[gd_scene load_steps=41 format=3 uid="uid://c0lvv1hrei6ye"]

[ext_resource type="Script" path="res://scripts/world_01.gd" id="1_l545v"]
[ext_resource type="Texture2D" uid="uid://cs1a0sytmp4yo" path="res://assets/Seasonal Tilesets/1 - Grassland/Terrain (16 x 16).png" id="2_m74jg"]
[ext_resource type="Texture2D" uid="uid://dov6k7lbtgq6x" path="res://assets/Seasonal Tilesets/1 - Grassland/Grassland_entities (16 x 16).png" id="3_xdbgk"]
[ext_resource type="Texture2D" uid="uid://c01276jydpknr" path="res://assets/Seasonal Tilesets/5 - Misc. universal tiles/Water_frames (16 x 32).png" id="4_yol5v"]
[ext_resource type="Texture2D" uid="uid://hapa351jmb6b" path="res://assets/Seasonal Tilesets/1 - Grassland/Background parts/5 - Sky_color.png" id="5_l37hr"]
[ext_resource type="Texture2D" uid="uid://bcc6cxw886ny4" path="res://assets/Seasonal Tilesets/1 - Grassland/Background parts/4 - Cloud_cover_2.png" id="6_g3g88"]
[ext_resource type="Shader" path="res://shaders/movement_cloud.gdshader" id="7_gnkvw"]
[ext_resource type="Texture2D" uid="uid://dgl8sp5otrprq" path="res://assets/Seasonal Tilesets/1 - Grassland/Background parts/3 - Cloud_cover_1.png" id="8_laics"]
[ext_resource type="Texture2D" uid="uid://b5wrevey306ko" path="res://assets/Seasonal Tilesets/1 - Grassland/Background parts/2 - Hills.png" id="9_bhsd2"]
[ext_resource type="Texture2D" uid="uid://7il8jhsyfx6t" path="res://assets/Seasonal Tilesets/1 - Grassland/Background parts/1 - Foreground_scenery.png" id="10_3fkge"]
[ext_resource type="PackedScene" uid="uid://dvjtd4r151hl5" path="res://prefabs/coin.tscn" id="11_n5v3n"]
[ext_resource type="PackedScene" uid="uid://cn8dwjohx1e3i" path="res://actors/tank_cheese_puff.tscn" id="13_7shu3"]
[ext_resource type="PackedScene" uid="uid://qga0inchn5hm" path="res://actors/player.tscn" id="14_je4h3"]
[ext_resource type="PackedScene" uid="uid://bkrqqqgjpxhlu" path="res://actors/enemy.tscn" id="15_wsrqr"]
[ext_resource type="PackedScene" uid="uid://cnq7boqh8lgh4" path="res://prefabs/goal.tscn" id="24_cm3gc"]
[ext_resource type="Texture2D" uid="uid://cyjid217p78uo" path="res://assets/mini_ui_buttons/ui_buttons_arrow_left_NORMAL.png" id="25_da3fw"]
[ext_resource type="Texture2D" uid="uid://dmkb20hwe4k41" path="res://assets/mini_ui_buttons/ui_buttons_arrow_left_PRESSED.png" id="26_0hr2u"]
[ext_resource type="Texture2D" uid="uid://cpphbepxbb32i" path="res://assets/mini_ui_buttons/ui_buttons_arrow_right_NORMAL.png" id="27_jv3ob"]
[ext_resource type="Texture2D" uid="uid://d252mkbsod7s2" path="res://assets/mini_ui_buttons/ui_buttons_arrow_right_PRESSED.png" id="28_ot1mq"]
[ext_resource type="Texture2D" uid="uid://du01soj57fr0w" path="res://assets/mini_ui_buttons/ui_buttons_arrow_up_NORMAL.png" id="29_q7pa2"]
[ext_resource type="Texture2D" uid="uid://djou2mworlukp" path="res://assets/mini_ui_buttons/ui_buttons_arrow_up_PRESSED.png" id="30_fxe51"]
[ext_resource type="Script" path="res://scripts/hud_manager.gd" id="31_7be7x"]
[ext_resource type="Texture2D" uid="uid://dx2pbvaai0uf8" path="res://assets/Mini FX, Items & UI/Common Pick-ups/Coin Sprite/00_Coin-Sprites.png" id="32_aue82"]
[ext_resource type="Texture2D" uid="uid://c5kvxg6y7guh8" path="res://assets/Mini FX, Items & UI/Common Pick-ups/Coin Sprite/01_Coin-Sprites.png" id="33_mqjo4"]
[ext_resource type="Texture2D" uid="uid://cltsjnevojd7s" path="res://assets/Mini FX, Items & UI/Common Pick-ups/Coin Sprite/02_Coin-Sprites.png" id="34_3jylr"]
[ext_resource type="Texture2D" uid="uid://ce4oeo8xfnpep" path="res://assets/Mini FX, Items & UI/Common Pick-ups/Coin Sprite/03_Coin-Sprites.png" id="35_x5a36"]
[ext_resource type="FontFile" uid="uid://b3xf52ob2f75l" path="res://assets/font/RevMiniPixel.ttf" id="36_q08xo"]
[ext_resource type="Texture2D" uid="uid://deiwo5uigs4im" path="res://assets/Mini FX, Items & UI/Common Pick-ups/Life-Counter-Icon.png" id="37_cda4t"]
[ext_resource type="PackedScene" uid="uid://cq8muiaenj6w4" path="res://prefabs/pause_menu.tscn" id="38_5gbbp"]
[ext_resource type="PackedScene" uid="uid://bjrg6lbweeec4" path="res://prefabs/scene_transition.tscn" id="39_5aw61"]
[ext_resource type="AudioStream" uid="uid://c3xrpdflj12ox" path="res://sounds/bg_music.wav" id="39_up3wd"]

[sub_resource type="TileMapPattern" id="TileMapPattern_t5ild"]
tile_data = PackedInt32Array(0, 65537, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_j4nj8"]
tile_data = PackedInt32Array(0, 589825, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_pxq24"]
tile_data = PackedInt32Array(0, 327681, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_48wca"]
texture = ExtResource("2_m74jg")
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/next_alternative_id = 4
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/1 = 1
2:3/2 = 2
2:3/3 = 3
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/next_alternative_id = 2
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0/physics_layer_0/polygon_0/one_way = true
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5o4y4"]
texture = ExtResource("3_xdbgk")
1:1/size_in_atlas = Vector2i(3, 3)
1:1/0 = 0
15:2/size_in_atlas = Vector2i(3, 1)
15:2/0 = 0
14:4/size_in_atlas = Vector2i(5, 2)
14:4/0 = 0
1:5/0 = 0
3:5/0 = 0
5:5/size_in_atlas = Vector2i(3, 1)
5:5/0 = 0
9:5/size_in_atlas = Vector2i(4, 1)
9:5/0 = 0
9:1/size_in_atlas = Vector2i(3, 3)
9:1/0 = 0
5:1/size_in_atlas = Vector2i(3, 3)
5:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tjeea"]
texture = ExtResource("4_yol5v")
0:0/animation_columns = 2
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_jycjq"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_48wca")
sources/1 = SubResource("TileSetAtlasSource_5o4y4")
sources/2 = SubResource("TileSetAtlasSource_tjeea")
pattern_0 = SubResource("TileMapPattern_t5ild")
pattern_1 = SubResource("TileMapPattern_j4nj8")
pattern_2 = SubResource("TileMapPattern_pxq24")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wntgt"]
shader = ExtResource("7_gnkvw")
shader_parameter/move_speed = 0.05

[sub_resource type="AnimatedTexture" id="AnimatedTexture_janvu"]
frames = 4
speed_scale = 3.0
frame_0/texture = ExtResource("32_aue82")
frame_1/texture = ExtResource("33_mqjo4")
frame_1/duration = 1.0
frame_2/texture = ExtResource("34_3jylr")
frame_2/duration = 1.0
frame_3/texture = ExtResource("35_x5a36")
frame_3/duration = 1.0

[node name="World-02" type="Node2D"]
script = ExtResource("1_l545v")

[node name="level" type="TileMap" parent="."]
light_mask = 0
visibility_layer = 2
tile_set = SubResource("TileSet_jycjq")
format = 2
layer_0/name = "water"
layer_0/tile_data = PackedInt32Array(589875, 2, 0, 589876, 2, 0, 589877, 2, 0, 589878, 2, 0, 589879, 2, 0, 589880, 2, 0, 589881, 2, 0, 589882, 2, 0, 589883, 2, 0, 589884, 2, 0, 589885, 2, 0, 589886, 2, 0, 589887, 2, 0, 589888, 2, 0, 589889, 2, 0, 589890, 2, 0, 655411, 2, 1, 720947, 2, 1, 720948, 2, 1, 786484, 2, 1, 786485, 2, 1, 786486, 2, 1, 852022, 2, 1, 852023, 2, 1, 852024, 2, 1, 852025, 2, 1, 786483, 2, 1, 852019, 2, 1, 655412, 2, 1, 852020, 2, 1, 655413, 2, 1, 720949, 2, 1, 852021, 2, 1, 655414, 2, 1, 720950, 2, 1, 655415, 2, 1, 720951, 2, 1, 786487, 2, 1, 655416, 2, 1, 720952, 2, 1, 786488, 2, 1, 655417, 2, 1, 720953, 2, 1, 786489, 2, 1, 655418, 2, 1, 720954, 2, 1, 786490, 2, 1, 852026, 2, 1, 655419, 2, 1, 720955, 2, 1, 786491, 2, 1, 852027, 2, 1, 655420, 2, 1, 720956, 2, 1, 786492, 2, 1, 852028, 2, 1, 655421, 2, 1, 720957, 2, 1, 786493, 2, 1, 852029, 2, 1, 655422, 2, 1, 720958, 2, 1, 786494, 2, 1, 852030, 2, 1, 655423, 2, 1, 720959, 2, 1, 786495, 2, 1, 852031, 2, 1, 655424, 2, 1, 720960, 2, 1, 786496, 2, 1, 852032, 2, 1, 655425, 2, 1, 720961, 2, 1, 786497, 2, 1, 852033, 2, 1, 655426, 2, 1, 720962, 2, 1, 786498, 2, 1, 852034, 2, 1)
layer_1/name = "ground"
layer_1/tile_data = PackedInt32Array(65537, 327680, 1, 65536, 262144, 1, 131072, 262144, 2, 196608, 262144, 2, 262144, 262144, 2, 327680, 262144, 2, 393216, 262144, 2, 458752, 262144, 2, 524288, 262144, 2, 589824, 262144, 2, 655360, 262144, 2, 720896, 262144, 2, 786432, 262144, 2, 851968, 262144, 2, 131073, 327680, 2, 196609, 327680, 2, 262145, 327680, 2, 327681, 327680, 2, 393217, 327680, 2, 458753, 327680, 2, 524289, 327680, 2, 589825, 327680, 3, 655361, 262144, 3, 720897, 262144, 3, 786433, 262144, 3, 851969, 262144, 3, 589826, 393216, 3, 589827, 393216, 3, 589828, 393216, 3, 589829, 393216, 3, 589830, 393216, 3, 589831, 393216, 3, 589832, 393216, 3, 589833, 393216, 3, 589834, 393216, 3, 589835, 393216, 3, 589836, 393216, 3, 589837, 393216, 3, 589838, 393216, 3, 589839, 393216, 3, 589840, 393216, 3, 589841, 393216, 3, 589842, 393216, 3, 655362, 262144, 3, 655363, 262144, 3, 655364, 262144, 3, 655365, 262144, 3, 655366, 262144, 3, 655367, 262144, 3, 655368, 262144, 3, 655369, 262144, 3, 655370, 262144, 3, 655371, 262144, 3, 655372, 262144, 3, 655373, 262144, 3, 655374, 262144, 3, 655375, 262144, 3, 655376, 262144, 3, 655377, 262144, 3, 655378, 262144, 2, 720914, 262144, 3, 720913, 262144, 3, 720912, 262144, 3, 720911, 262144, 3, 720910, 262144, 3, 720909, 262144, 3, 720908, 262144, 3, 720907, 262144, 3, 720906, 262144, 3, 720905, 262144, 3, 720904, 262144, 3, 720903, 262144, 3, 720902, 262144, 3, 720901, 262144, 3, 720900, 262144, 3, 720899, 262144, 3, 720898, 262144, 3, 786434, 262144, 3, 851970, 262144, 3, 851971, 262144, 3, 851972, 262144, 3, 851973, 262144, 3, 851974, 262144, 3, 851975, 262144, 3, 851976, 262144, 3, 851977, 262144, 3, 851978, 262144, 3, 851979, 262144, 3, 851980, 262144, 3, 786435, 262144, 3, 786436, 262144, 3, 786437, 262144, 3, 786438, 262144, 3, 786439, 262144, 3, 786440, 262144, 3, 786441, 262144, 3, 786442, 262144, 3, 786443, 262144, 3, 786444, 262144, 3, 786445, 262144, 3, 786446, 262144, 3, 786447, 262144, 3, 786448, 262144, 3, 786449, 262144, 3, 786450, 262144, 3, 851986, 262144, 3, 851985, 262144, 3, 851984, 262144, 3, 851983, 262144, 3, 851982, 262144, 3, 851981, 262144, 3, 589843, 262144, 2, 524307, 196608, 2, 458771, 196608, 2, 393235, 196608, 2, 327699, 196608, 2, 262163, 196608, 2, 196627, 196608, 1, 196628, 262144, 1, 196629, 262144, 1, 196630, 262144, 1, 196631, 262144, 1, 262164, 262144, 2, 262165, 262144, 2, 262166, 262144, 2, 327702, 262144, 2, 393238, 262144, 2, 393237, 262144, 2, 327701, 262144, 2, 327700, 262144, 2, 393236, 262144, 2, 458772, 262144, 2, 458773, 262144, 2, 262167, 262144, 2, 327703, 262144, 2, 393239, 262144, 2, 458775, 262144, 2, 524311, 262144, 2, 589847, 262144, 2, 589846, 262144, 2, 589845, 262144, 2, 589844, 262144, 2, 524308, 262144, 2, 524309, 262144, 2, 524310, 262144, 2, 458774, 262144, 2, 655379, 262144, 2, 720915, 262144, 2, 786451, 262144, 2, 851987, 262144, 2, 655380, 262144, 2, 720916, 262144, 2, 786452, 262144, 2, 851988, 262144, 2, 655381, 262144, 2, 720917, 262144, 2, 786453, 262144, 2, 851989, 262144, 2, 655382, 262144, 2, 720918, 262144, 2, 786454, 262144, 2, 851990, 262144, 2, 655383, 262144, 2, 720919, 262144, 2, 786455, 262144, 2, 851991, 262144, 2, 196632, 327680, 1, 262168, 327680, 2, 327704, 327680, 2, 393240, 327680, 2, 458776, 327680, 2, 524312, 327680, 2, 589848, 327680, 3, 655384, 262144, 3, 720920, 262144, 3, 786456, 262144, 3, 851992, 262144, 3, 655385, 262144, 3, 720921, 262144, 3, 786457, 262144, 3, 655386, 262144, 3, 720922, 262144, 3, 786458, 262144, 3, 655387, 262144, 3, 720923, 262144, 3, 786459, 262144, 3, 655388, 262144, 3, 720924, 262144, 3, 786460, 262144, 3, 655389, 262144, 3, 720925, 262144, 3, 786461, 262144, 3, 655390, 262144, 3, 720926, 262144, 3, 786462, 262144, 3, 655391, 262144, 3, 720927, 262144, 3, 786463, 262144, 3, 655392, 262144, 3, 720928, 262144, 3, 786464, 262144, 3, 851993, 262144, 3, 851994, 262144, 3, 851995, 262144, 3, 851996, 262144, 3, 851997, 262144, 3, 851998, 262144, 3, 851999, 262144, 3, 852000, 262144, 3, 655393, 262144, 3, 720929, 262144, 3, 786465, 262144, 3, 852001, 262144, 3, 655394, 262144, 3, 720930, 262144, 3, 786466, 262144, 3, 852002, 262144, 3, 655395, 262144, 3, 720931, 262144, 3, 786467, 262144, 3, 852003, 262144, 3, 655396, 262144, 3, 720932, 262144, 3, 786468, 262144, 3, 852004, 262144, 3, 655397, 262144, 3, 720933, 262144, 3, 786469, 262144, 3, 852005, 262144, 3, 655398, 262144, 3, 720934, 262144, 3, 786470, 262144, 3, 852006, 262144, 3, 655399, 262144, 3, 720935, 262144, 3, 786471, 262144, 3, 852007, 262144, 3, 655400, 262144, 3, 720936, 262144, 3, 786472, 262144, 3, 852008, 262144, 3, 655401, 262144, 3, 720937, 262144, 3, 786473, 262144, 3, 852009, 262144, 3, 655402, 262144, 3, 720938, 262144, 3, 786474, 262144, 3, 852010, 262144, 3, 655403, 262144, 3, 720939, 262144, 3, 786475, 262144, 3, 852011, 262144, 3, 655404, 262144, 3, 720940, 262144, 3, 786476, 262144, 3, 852012, 262144, 3, 655405, 262144, 3, 720941, 262144, 3, 786477, 262144, 2, 852013, 262144, 2, 589849, 262144, 1, 589850, 262144, 1, 589851, 262144, 1, 589852, 262144, 1, 589853, 262144, 1, 589854, 262144, 1, 589855, 262144, 1, 589856, 262144, 1, 589857, 262144, 1, 589858, 262144, 1, 589859, 262144, 1, 589860, 262144, 1, 589861, 262144, 1, 589862, 262144, 1, 589863, 262144, 1, 589864, 262144, 1, 589865, 262144, 1, 589866, 262144, 1, 589867, 262144, 1, 589868, 262144, 1, 589869, 196608, 3, 131093, 262144, 1, 131094, 262144, 1, 131095, 327680, 1, 393221, 589824, 3, 393222, 655360, 3, 393223, 655360, 3, 393224, 851968, 3, 262156, 589824, 3, 262157, 655360, 3, 262158, 655360, 3, 262159, 851968, 3, 65544, 983040, 3, -65532, 983040, 3, -262137, 983040, 3, -393203, 983040, 3, 524333, 196608, 2, 458797, 196608, 2, 393261, 196608, 2, 327725, 196608, 2, 262189, 196608, 2, 196653, 196608, 2, 196654, 262144, 2, 262190, 262144, 2, 327726, 262144, 2, 393262, 262144, 2, 458798, 262144, 2, 524334, 262144, 2, 589870, 262144, 2, 655406, 262144, 2, 720942, 262144, 2, 786478, 262144, 2, 852014, 262144, 2, 131117, 196608, 1, 131118, 262144, 1, 131119, 262144, 1, 131120, 196608, 3, 196655, 262144, 2, 262191, 262144, 2, 262192, 262144, 2, 327728, 262144, 2, 393264, 262144, 2, 393263, 262144, 2, 458799, 262144, 2, 327727, 262144, 2, 196656, 262144, 2, 458800, 262144, 2, 524336, 262144, 2, 589872, 262144, 2, 655408, 262144, 2, 655407, 262144, 2, 589871, 262144, 2, 524335, 262144, 2, 720943, 262144, 2, 720944, 262144, 2, 786480, 262144, 2, 852016, 262144, 2, 852015, 262144, 2, 786479, 262144, 2, 65584, 196608, 2, 48, 196608, 2, -65488, 196608, 2, -131024, 196608, 2, -196560, 196608, 2, -262096, 196608, 2, -327632, 196608, 2, -393168, 196608, 2, -458704, 196608, 1, -458703, 262144, 1, -458702, 262144, 1, -458701, 327680, 1, -393167, 262144, 2, -393166, 262144, 2, -393165, 327680, 2, -327629, 327680, 2, -262093, 327680, 2, -262094, 262144, 2, -327630, 262144, 2, -327631, 262144, 2, -262095, 262144, 2, -196559, 262144, 2, -131023, 262144, 2, -131022, 262144, 2, -196558, 262144, 2, -196557, 327680, 2, -131021, 327680, 2, -65485, 327680, 2, -65486, 262144, 2, -65487, 262144, 2, 49, 262144, 2, 50, 262144, 2, 51, 327680, 2, 65587, 327680, 2, 65586, 262144, 2, 65585, 262144, 2, 131121, 262144, 2, 131122, 262144, 2, 131123, 327680, 2, 196659, 327680, 2, 196658, 262144, 2, 262194, 262144, 2, 262193, 262144, 2, 196657, 262144, 2, 262195, 327680, 2, 327729, 262144, 2, 327730, 262144, 2, 327731, 327680, 2, 393267, 327680, 2, 393266, 262144, 2, 393265, 262144, 2, 458801, 262144, 2, 458802, 262144, 2, 458803, 327680, 2, 524337, 262144, 2, 589873, 262144, 2, 655409, 262144, 2, 720945, 262144, 2, 524338, 262144, 2, 589874, 262144, 2, 655410, 262144, 2, 720946, 262144, 2, 524339, 327680, 2, 589875, 327680, 2, 655411, 327680, 2, 720947, 327680, 2, 786481, 262144, 2, 852017, 262144, 2, 786482, 262144, 2, 852018, 262144, 2, 786483, 327680, 2, 852019, 327680, 2, 393269, 589824, 3, 393270, 655360, 3, 393271, 655360, 3, 393272, 655360, 3, 393273, 655360, 3, 393274, 655360, 3, 393275, 655360, 3, 393276, 655360, 3, 393277, 851968, 3, 458769, 589825, 1, 458766, 589825, 1, 458763, 589825, 1, 262152, 589825, 1, 131085, 589825, 1, -65536, 589825, 1, -65535, 589825, 1, 327686, 327681, 5, 131092, 196608, 1, 262198, 327681, 1, 262205, 327681, 1, 262202, 327681, 1, 262201, 327681, 1, 327736, 983041, 2, 327740, 65537, 5, 327733, 196609, 5, 65560, 589825, 1, 21, 589825, 1)
layer_2/name = "trees"

[node name="BG" type="ParallaxBackground" parent="."]

[node name="05" type="ParallaxLayer" parent="BG"]
position = Vector2(0, -121)
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(432, 312)

[node name="sky" type="Sprite2D" parent="BG/05"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_l37hr")
centered = false

[node name="04" type="ParallaxLayer" parent="BG"]
position = Vector2(0, -121)
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(432, 0)

[node name="back_cloud" type="Sprite2D" parent="BG/04"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_g3g88")
centered = false

[node name="03" type="ParallaxLayer" parent="BG"]
position = Vector2(0, -121)
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(432, 0)

[node name="cloud" type="Sprite2D" parent="BG/03"]
texture_repeat = 2
material = SubResource("ShaderMaterial_wntgt")
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_laics")
centered = false

[node name="02" type="ParallaxLayer" parent="BG"]
position = Vector2(0, -121)
motion_scale = Vector2(0.7, 1)
motion_mirroring = Vector2(432, 0)

[node name="hill" type="Sprite2D" parent="BG/02"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_bhsd2")
centered = false

[node name="01" type="ParallaxLayer" parent="BG"]
position = Vector2(0, -121)
motion_scale = Vector2(0.9, 1)
motion_mirroring = Vector2(432, 0)

[node name="forest" type="Sprite2D" parent="BG/01"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_3fkge")
centered = false

[node name="start_player_position" type="Marker2D" parent="."]
position = Vector2(57, 133)

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_bottom = 300

[node name="player" parent="." instance=ExtResource("14_je4h3")]
position = Vector2(519, 123)

[node name="enemies" type="Node2D" parent="."]

[node name="enemy" parent="enemies" instance=ExtResource("15_wsrqr")]
position = Vector2(249, 63)

[node name="enemy2" parent="enemies" instance=ExtResource("15_wsrqr")]
position = Vector2(294, 142)

[node name="TankCheesePuff" parent="enemies" instance=ExtResource("13_7shu3")]
position = Vector2(702, 145)

[node name="coins" type="Node2D" parent="."]

[node name="coin" parent="coins" instance=ExtResource("11_n5v3n")]
position = Vector2(136, 2)

[node name="coin2" parent="coins" instance=ExtResource("11_n5v3n")]
position = Vector2(73, -29)

[node name="coin3" parent="coins" instance=ExtResource("11_n5v3n")]
position = Vector2(121, -82)

[node name="coin4" parent="coins" instance=ExtResource("11_n5v3n")]
position = Vector2(215, -109)

[node name="coin5" parent="coins" instance=ExtResource("11_n5v3n")]
position = Vector2(290, -94)

[node name="coin6" parent="coins" instance=ExtResource("11_n5v3n")]
position = Vector2(311, -83)

[node name="coin7" parent="coins" instance=ExtResource("11_n5v3n")]
position = Vector2(325, -66)

[node name="coin8" parent="coins" instance=ExtResource("11_n5v3n")]
position = Vector2(336, -46)

[node name="coin9" parent="coins" instance=ExtResource("11_n5v3n")]
position = Vector2(343, -25)

[node name="goal" parent="." instance=ExtResource("24_cm3gc")]
position = Vector2(744, 28)

[node name="controls" type="CanvasLayer" parent="."]
visible = false

[node name="ui_left" type="TouchScreenButton" parent="controls"]
position = Vector2(9, 122)
texture_normal = ExtResource("25_da3fw")
texture_pressed = ExtResource("26_0hr2u")
action = "ui_left"
visibility_mode = 1

[node name="ui_right" type="TouchScreenButton" parent="controls"]
position = Vector2(44, 122)
texture_normal = ExtResource("27_jv3ob")
texture_pressed = ExtResource("28_ot1mq")
action = "ui_right"
visibility_mode = 1

[node name="ui_up" type="TouchScreenButton" parent="controls"]
position = Vector2(280, 122)
texture_normal = ExtResource("29_q7pa2")
texture_pressed = ExtResource("30_fxe51")
action = "ui_accept"
visibility_mode = 1

[node name="HUD" type="CanvasLayer" parent="."]

[node name="control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("31_7be7x")

[node name="clock_timer" type="Timer" parent="HUD/control"]
autostart = true

[node name="container" type="MarginContainer" parent="HUD/control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="coins_container" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="coins_icon" type="TextureRect" parent="HUD/control/container/coins_container"]
layout_mode = 2
size_flags_horizontal = 0
texture = SubResource("AnimatedTexture_janvu")
expand_mode = 2

[node name="coins_counter" type="Label" parent="HUD/control/container/coins_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("36_q08xo")
theme_override_font_sizes/font_size = 16
text = "0000"
vertical_alignment = 1

[node name="score_container" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="score_label" type="Label" parent="HUD/control/container/score_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("36_q08xo")
theme_override_font_sizes/font_size = 16
text = "SCORE:"
vertical_alignment = 1

[node name="score_counter" type="Label" parent="HUD/control/container/score_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("36_q08xo")
theme_override_font_sizes/font_size = 16
text = "000000"
vertical_alignment = 1

[node name="timer_container" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="timer_label" type="Label" parent="HUD/control/container/timer_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("36_q08xo")
theme_override_font_sizes/font_size = 16
text = "TIME:"
vertical_alignment = 1

[node name="timer_counter" type="Label" parent="HUD/control/container/timer_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("36_q08xo")
theme_override_font_sizes/font_size = 16
text = "00:00"
vertical_alignment = 1

[node name="life_container" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="life_icon" type="TextureRect" parent="HUD/control/container/life_container"]
layout_mode = 2
texture = ExtResource("37_cda4t")
expand_mode = 2

[node name="life_separator" type="Label" parent="HUD/control/container/life_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("36_q08xo")
theme_override_font_sizes/font_size = 14
text = "X"
vertical_alignment = 1

[node name="life_counter" type="Label" parent="HUD/control/container/life_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("36_q08xo")
theme_override_font_sizes/font_size = 14
text = "03"
vertical_alignment = 1

[node name="pause_menu" parent="." instance=ExtResource("38_5gbbp")]
visible = false

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("39_up3wd")
volume_db = -10.0
autoplay = true

[node name="scene_transition" parent="." instance=ExtResource("39_5aw61")]

[connection signal="timeout" from="HUD/control/clock_timer" to="HUD/control" method="_on_clock_timer_timeout"]
